// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/utility/Pagination matches the snapshot 1`] = `
<Nav
  aria-label="Pagination"
>
  <Columns>
    <Column>
      <ul>
        <li
          key="previous"
        >
          <Link
            aria-disabled={true}
            as="a"
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <IconComposer
              fill="currentColor"
              icon="arrowLongLeft16"
              screenReaderText="previous page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
            <span>
              Prev
            </span>
          </Link>
        </li>
      </ul>
    </Column>
    <Column>
      <Pages>
        <li
          key="1"
        >
          <Link
            aria-current="page"
            as="a"
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              aria-hidden="true"
            >
              1
            </span>
            <span
              className="screen-reader-text"
            >
              Go to page: 
              1
            </span>
          </Link>
        </li>
        <li
          key="2"
        >
          <Link
            as="a"
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              aria-hidden="true"
            >
              2
            </span>
            <span
              className="screen-reader-text"
            >
              Go to page: 
              2
            </span>
          </Link>
        </li>
      </Pages>
    </Column>
    <Column>
      <ul>
        <li
          key="next"
        >
          <Link
            aria-disabled={false}
            as="a"
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span>
              Next
            </span>
            <IconComposer
              fill="currentColor"
              icon="arrowLongRight16"
              screenReaderText="next page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
          </Link>
        </li>
      </ul>
    </Column>
  </Columns>
</Nav>
`;

exports[`global/components/utility/Pagination when it is compact matches the snapshot 1`] = `
<Nav
  aria-label="Pagination"
>
  <Columns>
    <Column>
      <ul>
        <li
          key="previous"
        >
          <Link
            aria-disabled={true}
            as="a"
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <IconComposer
              fill="currentColor"
              icon="arrowLongLeft16"
              screenReaderText="previous page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
            <span>
              Prev
            </span>
          </Link>
        </li>
      </ul>
    </Column>
    <Column>
      <Pages>
        <li>
          <span>
            Page 
            1
             
            /
             
            2
          </span>
        </li>
      </Pages>
    </Column>
    <Column>
      <ul>
        <li
          key="next"
        >
          <Link
            aria-disabled={false}
            as="a"
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span>
              Next
            </span>
            <IconComposer
              fill="currentColor"
              icon="arrowLongRight16"
              screenReaderText="next page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
          </Link>
        </li>
      </ul>
    </Column>
  </Columns>
</Nav>
`;

exports[`global/components/utility/Pagination when there are no pagination props renders to null 1`] = `""`;
